# rhyme

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml  rhyme-v1-spec.md  sifter-v1-spec.md
data/prose_pools/: README  cascading_timeout.json  certificate_expiry.json  clock_skew.json  code_regression.json  config_regression.json  connection_pool_exhaustion.json  cpu_throttling.json  data_corruption.json  dependency_outage.json  disk_pressure.json  dns_resolution_failure.json  downstream_slowdown.json  load_balancer_misconfiguration.json  memory_leak.json  network_partition.json  race_condition.json  retry_storm.json  schema_migration_failure.json  traffic_allocation.json  traffic_spike.json
data/real_incidents/: aws_sample.csv  azure_sample.csv  danluu_classified.json  extracted.json  gcp_sample.csv  rcaeval_patterns.json  regenerate_instructions.md  style_block.txt  style_examples.json
examples/: anthropic_adapter.py  bedrock_adapter.py  echo_adapter.py  gemini_adapter.py  openai_compat_adapter.py  parse_utils.py  sample_incidents.json
paper/: rhyme-paper.md  sifter-paper.md
scripts/: benchmark_models.py  classify_real_incidents.py
src/rhyme_bench/: __init__.py  baselines.py  cli.py  harness.py  scorer.py  style_probe.py  taxonomy.py
src/rhyme_web/: __init__.py  app.py  cli.py  database.py  models.py  scorer_human.py
src/sifter_bench/: __init__.py  archetypes.py  cli.py  generator.py  models.py  prose_pools.py  queries.py  scorer.py  subprocess_adapter.py  taxonomy.py
src/sifter_web/: __init__.py  app.py  cli.py  database.py  models.py  (+1 more)
tests/: conftest.py  test_baselines.py  test_generator.py  test_harness.py  test_integration.py  test_model_comparison.py  test_models.py  test_pair_sampler.py  test_queries.py  test_scorer.py  test_scorer_human.py  test_stress.py  test_style_probe.py  test_subprocess_adapter.py  test_taxonomy.py  test_web_app.py  test_web_models.py
(+12 files in other folders)
