[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhyme"
version = "1.0.0"
description = "Benchmark and evaluation tool for LLM-based incident correlation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
generate = [
    "anthropic>=0.39",
    "openai>=1.0",
]
web = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "psycopg2-binary>=2.9",
    "gunicorn>=22.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
rhyme-generate = "rhyme_bench.cli:generate"
rhyme-run = "rhyme_bench.cli:run"
rhyme-score = "rhyme_bench.cli:score"
rhyme-probe = "rhyme_bench.cli:probe"
rhyme-eval = "rhyme_bench.cli:eval_web"
rhyme-web = "rhyme_web.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
